test/tests/operators/to_iceberg/create/06_create_existing.txt
error: Iceberg table `createns.events` already exists
 --> tests/operators/to_iceberg/create/06_create_existing.tql:7:12
  |
7 | to_iceberg "createns.events", catalog=env("ICEBERG_REST_URI"), mode="create"
  |            ^^^^^^^^^^^^^^^^^ 
  |
  = note: use `mode="create_append"` or `mode="append"` to write into an existing table
